# perl-ide-server

./: .gitignore  Autocomplete.cpp  Autocomplete.h  CMakeLists.txt  FilePos.h  Node.h  Parser.cpp  Parser.h  PerlCommandLine.h  PerlProject.cpp  README.md  TestMain.cpp  Token.cpp  Token.h  Tokeniser.cpp  Tokeniser.h  Util.cpp  Util.h  VarAnalysis.cpp  VarAnalysis.h  cotire.cmake  main.cpp  notes.txt
lib/: httplib.h  json.hpp  md5.c  md5.h  pstreams.h
notes/: Code structure.md  Importing.md  package globals.txt  packages.txt  server.md
scipts/: mk_tokeniser_test.sh  tokenhtml.sh
search/: Search.cpp  Search.h
src/: Autocomplete.cpp  Autocomplete.h  AutocompleteItem.cpp  AutocompleteItem.h  Cache.cpp  Cache.h  Constants.h  FileAnalysis.cpp  FileAnalysis.h  FilePos.cpp  FilePos.h  IOException.h  Node.h  Package.cpp  Package.h  Parser.cpp  Parser.h  PerlCommandLine.cpp  PerlCommandLine.h  PerlProject.h  PerlServer.cpp  PerlServer.h  Refactor.cpp  Refactor.h  Serialize.cpp  Serialize.h  Subroutine.cpp  Subroutine.h  SymbolLoader.cpp  SymbolLoader.h  Symbols.cpp  Symbols.h  Test.cpp  Test.h  Token.cpp  Token.h  TokeniseException.h  Tokeniser.cpp  Tokeniser.h  Util.cpp  (+7 more)
sublime/: PerlComplete.py
test/expected/: heredocs.txt  numeric.txt  references.txt  strings.txt  subs.txt  variables.txt
test/pl/: heredocs.pl  numeric.pl  references.pl  strings.pl  subs.pl  variables.pl
token/: Token.h  test.txt  variables.txt
token_html/: index.html
